--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".administrator_view" />
-        <activity android:name=".new_user_account" />
+        <activity android:name=".AdminView" />
+        <activity android:name=".NewUserAccount" />
         <activity android:name=".BookSearch"></activity>
     </application>
 
