--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".AdminView" />
         <activity android:name=".NewUserAccount" />
-        <activity android:name=".BookSearch"></activity>
+        <activity android:name=".BookSearch" />
+        <activity android:name=".SearchResults"></activity>
     </application>
 
 </manifest>
